visualizer/css/main.css
* {
  box-sizing: border-box;
}

body {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;

  min-width: 600px;
  display: grid;

  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
    "Lucida Sans", Arial, sans-serif;
  margin: 0;
}

button {
  padding: 5px 10px;
  border: 1px solid #999;
  background-color: #ededed;
  border-radius: 2px;
}

button:hover,
button:focus {
  background-color: #d7d7d7;
  outline: none;
}

button:active {
  background-color: #ccc;
  outline: none;
}

button:disabled {
  background-color: #ededed;
  border: 1px solid #ddd;
}

#progress {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
}

#charts {
  grid-area: charts;
  overflow: auto;
  padding: 20px;
}

#info {
  grid-area: info;
}

#legend {
  width: 100px;
  padding: 20px;
  margin-left: auto;
  margin-right: auto;
}

#stats {
  width: 135px;
  padding: 10px;
  overflow: auto;
}

#side-bar {
  grid-area: side-bar;
  overflow: hidden;
  display: flex;
  flex-direction: column;
}

#side-bar-header {
  display: flex;
  align-items: center;
  padding: 5px;
  background-color: #ededed;
}

#side-bar-header > * {
  margin: 5px;
}

#tables-wrapper {
  overflow: auto;
  flex: 1;
}

@media (max-width: 750px) {
  #charts {
    padding: 0;
  }
}

@media (max-width: 1500px) {
  body {
    grid-template-rows: 2fr 1fr;
    grid-template-columns: 1fr auto;
    grid-template-areas:
      "charts info"
      "side-bar side-bar";
  }

  #side-bar {
    border-top: 1px solid #999;
  }
}

@media (min-width: 1500px) {
  body {
    grid-template-rows: 1fr;
    grid-template-columns: 700px auto 1fr;
    grid-template-areas: "charts info side-bar";
  }

  #side-bar {
    border-left: 1px solid #999;
  }
}

